--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -195,11 +195,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import Image\n",
     "Image('img/python.png', width=400)"
    ]
   },
@@ -370,7 +369,6 @@
    },
    "outputs": [],
    "source": [
-    "from IPython.display import Image\n",
     "Image(filename='img/datasciencehandbook.jpg', width=300) "
    ]
   },
@@ -1884,7 +1882,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task (optional): recreate the data science in this [FiveThrityEight story](https://fivethirtyeight.com/features/some-people-are-too-superstitious-to-have-a-baby-on-friday-the-13th/)\n",
+    "### Task (optional): recreate the data science in this [FiveThirtyEight story](https://fivethirtyeight.com/features/some-people-are-too-superstitious-to-have-a-baby-on-friday-the-13th/)\n",
     "We provide the data from their github, which you will need to merge, or join, or concatenate. \n",
     "Please only use Pandas."
    ]
